--- a/URL-shortner/package.json
+++ b/URL-shortner/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^8.1.3",
     "nanoid": "^5.0.5",
     "rangen": "^1.0.0",
-    "shortid": "^2.2.16"
+    "shortid": "^2.2.16",
+    "uuid": "^9.0.1"
   }
 }
